...
            </View>
            <ThemedText type='default'>Añade todas tus plantas para cuidarlas fácilmente</ThemedText>
            <TouchableOpacity style={styles.searchContainer} onPress={handleSearch} activeOpacity={1}>
                <View
                    style={styles.searchInput}
                >
                    <Text style={styles.searchPlaceholder}>Buscar plantas...</Text>
                </View>
                <View style={styles.iconContainer} >
                    <Ionicons name="search" size={35} color="#11181C" />
                </View>
            </TouchableOpacity>
            {loading && (
...
