...
              </TouchableOpacity>

            </ThemedView>
          </TouchableOpacity>
          </Swipeable>
        ))}
        <Button text="Añadir planta" onPress={handleAdd} />
        <View style={{ marginBottom: 24 }} />
      </ScrollView>

      {/* Modal de opciones del menú */}
      <Modal
        visible={modalVisible}
...
