...
                            onPress={() => {
                                openModal('name')
                            }}
                        >
                            <View style={{ flexDirection: "row", alignItems: "center", gap: 8 }}>
                                <Ionicons name="reader" size={24} color={"#bfd8c5ff"} />
                                <ThemedText type='default'>Nombre</ThemedText>
                            </View>
                            <View style={{ display: 'flex', alignItems: "center", flexDirection: "row", gap: 2, alignContent: 'center' }}>
                                {garden.name ? (<ThemedText type='default'>{garden.name}</ThemedText>) : (
                                    <ThemedText type='italic'>Seleccionar</ThemedText>
                                )}
                                <Ionicons name="chevron-forward" size={16} color={"#bfd8c5ff"}></Ionicons>
...
                                {isLoading ? (
                                    <>
                                        <ActivityIndicator size="small" color="#fff" />
                                        <ThemedText type="default" style={{ color: "#fff", fontWeight: 'bold' }}>Guardando...</ThemedText>
                                    </>
                                ) : (
                                    <ThemedText type="default" style={{ color: "#fff", fontWeight: 'bold' }}>Aceptar</ThemedText>
                                )}
                            </TouchableOpacity>
                        </View>

                        {modalType === 'name' && (
                            <View style={styles.searchContainer}>
                                <TextInput
                                    placeholder="Nombre del sitio"
                                    autoCapitalize="none"
                                    style={styles.searchInput}
                                    value={name}
                                    onChangeText={(text) => { setName(text) }}
                                />
                            </View>
...
