...
                        top: menuPosition.top,
                        right: menuPosition.right
                    }]}>
                        <Pressable style={{ marginBottom: 12 }} onPress={() => {
                            handleSettings(selectedGarden!.id);
                        }}>
                            <ThemedText type="defaultSemiBold">Ajustes del lugar</ThemedText>
                        </Pressable>
                        <Pressable onPress={() => {
                            setConfirmVisible(true);
                        }}>
                            <ThemedText type="defaultSemiBold" style={{ fontSize: 16, color: "red" }}>Eliminar</ThemedText>
                        </Pressable>
...
