...
            console.log("Login successful", data);
            return data; // Return the user data or token as needed
        } else {
            throw new Error('Usuario o contraseña incorrectos');
        }
    } catch (e) {
        throw new Error('Error al iniciar sesión: ' + e);
    }
  },

  refreshToken: async (refreshToken: string): Promise<any> => {
    try {
      const response = await fetch(`${url}/api/refresh/`, {
...
